# furcast-porn-bot

./: .env.example  .gitignore  Pipfile  README.md  furcast-porn-bot.service  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  python-lint.yml
furcastpornbot/: __init__.py  furcastpornbot.py
