[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "furcastpornbot"
description = "NSFW sharing bot for FurCast"
dynamic = ["version"]
readme = "README.md"
license = "EUPL-1.2"
license-files = ["LICENSE.txt"]
authors = [{name = "Riley Clarke", email = "riley@bad.pet"}]
maintainers = [{name = "Riley Clarke", email = "riley@bad.pet"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

requires-python = ">=3.11, <4"
dependencies = [
    "pluggy ~= 1.5",
    "python-dateutil ~= 2.9",
    "python-dotenv ~= 1.2",
    "python-telegram-bot[job-queue] ~= 22.7",
    "ddate ~= 0.1.2",
    "ujson ~= 5.10",
]

[project.urls]
"Homepage" = "https://github.com/xbnstudios/furcast-porn-bot"
"Source" = "https://github.com/xbnstudios/furcast-porn-bot"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "flake8-coding",
    "flake8-import-order",
    "flake8-pyproject",
    "mypy",
    "types-python-dateutil",
]

[project.scripts]
furcastpornbot = "furcastpornbot.furcastpornbot:main"

[tool.setuptools.dynamic]
version = {attr = "furcastpornbot.__version__"}

[tool.setuptools.packages]
find = {}

[tool.flake8]
max-line-length = 99
application-import-names = ["main", "furcastpornbot"]
import-order-style = "google"
exclude = ["env/*", "venv/*", ".venv/*"]
no-accept-encodings = true
ignore = [
    # "line break before binary operator" - black conflict
    "W503",
    # Unnecessary on py3.9+
    "FI10","FI11","FI12","FI13","FI14","FI15","FI16","FI17",
    # Needed until py3.11
    "FI58",
]
