[metadata]
name = furcastpornbot
version = attr: furcastpornbot.__version__
description = NSFW sharing bot for FurCast
long_description = file: README.md
long_description_content_type = text/markdown
author = Riley Carter
author_email = riley@bad.pet
url = https://github.com/xbnstudios/furcast-porn-bot
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
python_requires = >=3.6, <4
packages = find:

[flake8]
max-line-length = 99
application-import-names = main, furcastpornbot
import-order-style = google
exclude =
    venv/*
accept-encodings = utf-8
