[metadata]
name = furcastpornbot
version = attr: furcastpornbot.__version__
description = NSFW sharing bot for FurCast
long_description = file: README.md
long_description_content_type = text/markdown
author = Riley Carter
author_email = riley@bad.pet
url = https://github.com/xbnstudios/furcast-porn-bot
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
python_requires = >=3.9, <4
packages = find:

[flake8]
max-line-length = 99
application-import-names = main, furcastpornbot
import-order-style = google
exclude =
    venv/*
no-accept-encodings = True
ignore =
    # "line break before binary operator" - black conflict
    W503,
    # Unnecessary on py3.9+
    FI10,FI11,FI12,FI13,FI14,FI15,FI16,FI17,
    # Needed until py3.11
    FI58,
